--- a/StationDemoClient/station-angular4-poc/src/index.html
+++ b/StationDemoClient/station-angular4-poc/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <title>AmeliaPoc</title>
+  <title>StationDemo</title>
  <!-- Load common libraries -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/typescript/2.1.1/typescript.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.min.js"></script>
