--- a/StationDemoClient/station-vuejs2-poc/index.html
+++ b/StationDemoClient/station-vuejs2-poc/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>test-sacem-vuejs</title>
+    <title>station-vuejs2-poc</title>
   </head>
   <body>
     <div id="app"></div>
