--- a/StationDemoClient/station-angular4-poc/src/index.html
+++ b/StationDemoClient/station-angular4-poc/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <base href="./">
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>StationDemo</title>
  <!-- Load common libraries -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/typescript/2.1.1/typescript.min.js"></script>
